@@ -21,5 +21,6 @@ sunuo (0.1.0) unstable; urgency=low
   * catch exceptions from Core.VerifySerialization(); dump
     LoaderExceptions
   * ignore case on data file names
+  * implemented the configuration file "./etc/sunuo.xml"
 
  --
